--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,8 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>AI Travel Agent Demo</title>
+    <!-- Google Identity Services (GIS) for Google Login -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <!-- Google Maps API: Removed - using @react-google-maps/api useLoadScript instead -->
+    <!-- The useLoadScript hook will load the API dynamically with proper async loading -->
   </head>
   <body>
     <div id="root"></div>
